snugom/tests/ui/searchable_on_datetime.stderr
error: searchable can only be used on String fields; use filterable for numeric or enum types
  --> tests/ui/searchable_on_datetime.rs:15:14
   |
15 |     #[snugom(searchable)]
   |              ^^^^^^^^^^
